# piwardrive

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydocstyle  COMPREHENSIVE_COVERAGE_ANALYSIS.md  COMPREHENSIVE_QA_COMPLETION_SUMMARY.md  COMPREHENSIVE_QA_FINAL_SUMMARY.md  CONSOLIDATED_EFFORTS_ARCHIVE.md  CONTRIBUTING.md  CRITICAL_ISSUES_RESOLUTION_REPORT.md  DAEMON_MODE_IMPLEMENTATION_COMPLETE.md  DEPENDENCY_MANAGEMENT_IMPLEMENTATION.md  DIRECTORY_STRUCTURE.md  Dockerfile  Dockerfile.webui  FINAL_CODE_QUALITY_REPORT.md  FINAL_QA_MISSION_COMPLETE.md  FINAL_QA_SECURITY_COMPREHENSIVE_REPORT.md  FINAL_REORGANIZATION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  LICENSE  MIGRATION.md  Makefile  README.md  README_v2.md  REFERENCE.md  SECURITY.md  UNDEFINED_VARIABLES_COMPLETION_REPORT.md  UNUSED_CODE_CLEANUP_REPORT.md  WEBUI_ERROR_HANDLING_COMPLETE.md  WEBUI_ERROR_HANDLING_ENHANCEMENT_COMPLETE.md  advanced_localization.py  analysis.py  backup.py  bandit_results.json  buildozer.spec  cgeom.pyi  ckml.py  (+70 more)
.github/: dependabot.yml
CHANGELOG/: CODE_QUALITY_REPORT.md  COMPREHENSIVE_QA_SECURITY_ANALYSIS.md  INSTALLATION_OPTIONS_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  QA_CONTINUATION_COMPLETION_REPORT.md  QA_PROGRESS_CONTINUATION_REPORT.md  README_v2.md  REORGANIZATION_COMPLETE.md  daily_summary.md  database_improvements.md  mutmut_results.txt  pip_audit_results.json  pip_licenses_results.json  precommit_results.txt  pydocstyle_current.txt  suspicious_activity.md
In development/: README.md  browser_server.py  web_api.js  web_api.py
archive/: CODE_QUALITY_ITERATION_PROGRESS.md  FINAL_QA_MISSION_COMPLETE.md  ITERATION_PROGRESS_SUMMARY.md  README.md  README_STUBS.md  code_analysis_report.md  comprehensive_code_quality_report.md
benchmarks/: analysis_queries_benchmark.py  packet_parse_benchmark.py  persistence_benchmark.py  plot_benchmark.py  scheduler_benchmark.py  status_benchmark.py
config/: .flake8  .pre-commit-config.yaml  cache_config.json  localization_config.json  mypy.ini  pyproject.toml  reno.yaml  requirements-core.txt  requirements-dev.txt  requirements.txt
deploy/: docker-compose.production.yml
docker/: .dockerignore  Dockerfile  Dockerfile.aggregation  docker-compose.grafana.yml
docs/: DIAGRAMS_SUMMARY.md  aggregation_service.rst  api.md  api_comprehensive_documentation.md  api_overview.md  api_usage_examples.rst  architecture.md  architecture.rst  architecture_overview.md  async_performance.md  backup_recovery.md  backups.rst  bluetooth.rst  ci-cd-pipeline.md  ckml_build.rst  cli_tools.rst  conf.py  config_schema.json  configuration.md  configuration.rst  database.rst  database_evolution.md  db_migration.md  dependency-management.md  deployment.rst  deployment_troubleshooting.md  development.md  diagnostics.rst  docker-deployment.md  docstring_templates.rst  drone_mapping.rst  environment.rst  faq.rst  field-serviceable-components.md  field-troubleshooting-guide.md  frontend_component_architecture.md  function_flows.rst  geofencing.rst  gps_clients.rst  gps_polling.rst  (+46 more)
documentation/: ADVANCED_FEATURES_IMPLEMENTATION_REPORT.md  CICD_UPDATES.md  CONTRIBUTING.md  DATABASE_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_SCALABILITY_PLAN.md  README.md  REPOSITORY_ASSESSMENT.md
examples/: Untitled-1.txt  default_profile.json  demographic_data.json  desktop_kismet.json  desktop_no_kismet.json  direction_finding_example.py  kiosk.service  mobile_kismet.json  mobile_no_kismet.json  orientation_map.json  orientation_sensors.json  piwardrive-aggregation.service  piwardrive-field-diagnostics.service  piwardrive-mobile-diagnostics.service  piwardrive-problem-reporter.service  piwardrive-webui.service  piwardrive.service  problem-reporter.conf  remote_sync.json  security_analysis_example.py  service_api.service
kivy/: metrics.py
kv/: main.kv
locales/: en.json  es.json
releasenotes/: config.yaml
screens/: __init__.py  console_screen.py  dashboard_screen.py  geofence_editor.py  map_screen.py  map_screen.pyi  settings_screen.py  split_screen.py  (+2 more)
sigint_suite/: README.md  __init__.py  hooks.py  models.py  paths.py  pyproject.toml  scan_all.py
sigint_suite/bluetooth/: __init__.py  scanner.py
sigint_suite/cellular/: __init__.py
sigint_suite/cellular/band_scanner/: __init__.py  scanner.py
sigint_suite/cellular/imsi_catcher/: __init__.py  scanner.py
sigint_suite/cellular/parsers/: __init__.py
sigint_suite/cellular/tower_tracker/: __init__.py  tracker.py
sigint_suite/dashboard/: __init__.py
sigint_suite/enrichment/: __init__.py  oui.py
sigint_suite/exports/: __init__.py  exporter.py
sigint_suite/gps/: __init__.py
sigint_suite/rf/: __init__.py  demod.py  spectrum.py
sigint_suite/scripts/: continuous_scan.py  export_data.sh  fetch_oui.sh  setup_all.sh  start_imsi_mode.sh
sigint_suite/wifi/: __init__.py  scanner.py
src/piwardrive/integrations/sigint_suite/: README.md  __init__.py  continuous_scan.py  hooks.py  models.py  paths.py  plugins.py  pyproject.toml  scan_all.py
src/piwardrive/integrations/sigint_suite/bluetooth/: __init__.py  scanner.py
src/piwardrive/integrations/sigint_suite/cellular/: __init__.py  utils.py
src/piwardrive/integrations/sigint_suite/cellular/band_scanner/: __init__.py  scanner.py
src/piwardrive/integrations/sigint_suite/cellular/imsi_catcher/: __init__.py  scanner.py
src/piwardrive/integrations/sigint_suite/cellular/parsers/: __init__.py
src/piwardrive/integrations/sigint_suite/cellular/tower_scanner/: __init__.py  scanner.py
src/piwardrive/integrations/sigint_suite/cellular/tower_tracker/: __init__.py  tracker.py
src/piwardrive/integrations/sigint_suite/dashboard/: __init__.py
src/piwardrive/integrations/sigint_suite/enrichment/: __init__.py  oui.py
src/piwardrive/integrations/sigint_suite/exports/: __init__.py  exporter.py
src/piwardrive/integrations/sigint_suite/rf/: __init__.py  demod.py  spectrum.py  utils.py
src/piwardrive/integrations/sigint_suite/scripts/: continuous_scan.py  start_passive.sh
src/piwardrive/integrations/sigint_suite/wifi/: scanner.py
(+1014 files in other folders)
