[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["scripts*"]
namespaces = true

[project]
name = "sigint-suite"
version = "0.1.0"
description = "Wireless scanning tools used by PiWardrive"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "../LICENSE"}
authors = [{name = "PiWardrive contributors"}]
keywords = ["wireless", "scanning", "raspberry pi", "sigint"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
wifi-scan = "sigint_suite.wifi.scanner:main"
bluetooth-scan = "sigint_suite.bluetooth.scanner:main"
imsi-scan = "sigint_suite.cellular.imsi_catcher.scanner:main"
band-scan = "sigint_suite.cellular.band_scanner.scanner:main"
scan-all = "sigint_suite.scan_all:main"

[project.optional-dependencies]
c-extensions = [
    "orjson",
    "ujson",
]

